--- a/feature.html
+++ b/feature.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>changes in feature branch</h1>
+    <h1>changes in feature branch ok</h1>
 </head>
 <body>
     
